fix(style): removed right-aligned text for reversed sections
closes #139

--- a/_scss/block/_main-content.scss
+++ b/_scss/block/_main-content.scss
@@ -28,7 +28,6 @@
 
         &--reverse {
           flex-direction: row-reverse;
-          text-align: right;
         }
 
         &--vertical-center {
